--- a/code/Analysis.rmd
+++ b/code/Analysis.rmd
@@ -2,7 +2,10 @@
 title: "Analysis"
 author: "Anisha Grover"
 date: '2022-11-01'
-output: html_document
+output: 
+  html_document:
+    keep_md: true
+
 ---
 
 ```{r setup, include=FALSE}
